<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".SplitBill">
    tools:showIn="@layout/activity_split_bill">

    <EditText
        android:id="@+id/numPeeps"
        android:layout_width="320dp"
        android:layout_height="42dp"
        android:ems="10"
        android:hint="@string/numberGuests"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/Cost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/Cost"
        android:layout_width="320dp"
        android:layout_height="44dp"
        android:ems="10"
        android:hint="@string/billTotal"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numPeeps" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="320dp"
        android:layout_height="25dp"
        android:gravity="center"
        android:text="@string/gatuityNote"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Cost" />

    <Button
        android:id="@+id/buttonSplits"
        android:layout_width="204dp"
        android:layout_height="45dp"
        android:text="@string/splitButton"
        app:layout_constraintBottom_toTopOf="@+id/resultText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="288dp"
        android:layout_height="32dp"
        android:contentDescription="@string/qualityPrompt"
        android:entries="@array/splitBillService"
        android:spinnerMode="dialog"
        app:layout_constraintBottom_toTopOf="@+id/buttonSplits"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="320dp"
        android:layout_height="42dp"
        android:gravity="center"
        android:text="@string/inScreenTitle"
        app:layout_constraintBottom_toTopOf="@+id/numPeeps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/resultText"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:textColor="#E91E63"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>